se añade animacion/work

--- a/pages/work.html
+++ b/pages/work.html
@@ -48,10 +48,14 @@
         <img class="Delikatessen" href="" src="../img/Delikatessen.gif" alt="Delikatessen">
         
         <img class="La_la_land" href="" src="../img/La-la_land.gif" alt="La_la_land">
-        
+
         <img class="Like_a_virgin" href="" src="../img/Like_a_virgin.gif" alt="Like_a_virgin">
 
         <img class="la_ventana_indiscreta" href="./pages/obra2.html" src="../img/laventanaindiscreta.gif" alt="laventanaindiscreta">
+
+        <div class="SweetPicnic__hover">
+          <img class="sweet__picnic" src="../img/sweet picnic.jpg" alt="sweet-picnic">
+        </div>
 
       </section>
    </main> 
