--- a/pages/work.html
+++ b/pages/work.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anula Mixtura</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link rel="stylesheet" href="../css/styles.css">
  
    
@@ -14,7 +15,8 @@
 <body>
  
   <header> 
-    <nav class="navContainer">
+
+<!--     <nav class="navContainer">
       <div class="navLogo">
         <a href="../index.html">
           <h1 class="logo">
@@ -28,8 +30,41 @@
         <a href="./news.html">NEWS</a>
         <a href="https://www.behance.net/anulamixtura" target="blank">SHOP</a>
         <a href="./contact.html">CONTACT</a>
-      
-    </nav>
+      </div>
+    </nav> -->
+
+
+
+    <!--        ejemplo Nav con bootstrap -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">ANULA MIXTURA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/work.html">WORK</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/news.html">NEWS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.behance.net/anulamixtura">SHOP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/contact.html">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
   </header>
 
     <main class="contenido">
@@ -65,6 +100,8 @@
   </footer>
  
  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
  
 </html>
