--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anula Mixtura</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
  
@@ -64,12 +65,28 @@
 
     </header>
 
-    <main class="contenido__index">
+
+<!--     <main class="contenido__index">
       <section class="imgContainer"> 
         <img class="imgIndex"  src="./img/Like_a_virgin.gif" alt="Like_a_virgin">
 
       </section>
+    </main> -->
+
+    <main>
+      <section class="no-parallax">
+        <h1>ANULA MIXTURA</h1>
+      </section>
+      <section class="parallax bg">
+        <h1>WORK</h1>
+      </section>
+      <section class="no-parallax">
+        <img src="./img/FATAL.JPG" alt="">
+        <img src="./img/pink foodies.jpg" alt="">
+        <img src="./img/SUMMERWHISPERS2.jpg" alt="">
+      </section>
     </main>
+
 
     <footer>
       <h1 class="titulo__footer">© Copyright 2022 Sofia Bedmar para Anula Mixtura - All rights reserved.</h1>
