--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">ANULA MIXTURA</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigit branchtion">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -78,12 +78,13 @@
         <h1>ANULA MIXTURA</h1>
       </section>
       <section class="parallax bg">
-        <h1>WORK</h1>
+<!--         <h1>WORK</h1> -->
       </section>
       <section class="no-parallax">
-        <img src="./img/FATAL.JPG" alt="">
+<!--         <img src="./img/FATAL.JPG" alt="">
         <img src="./img/pink foodies.jpg" alt="">
-        <img src="./img/SUMMERWHISPERS2.jpg" alt="">
+        <img src="./img/SUMMERWHISPERS2.jpg" alt=""> -->
+        <a href="./pages/work.html" type="button" class="btn btn-lg">WORK</a>
       </section>
     </main>
 
