--- a/pages/work.html
+++ b/pages/work.html
@@ -73,7 +73,7 @@
  <section class="contenido__work">
 
  
-        <img class="homeplanning" href="./pages/obra1.html" src="../img/homeplanning.gif" alt="homeplanning">
+<!--         <img class="homeplanning" href="./pages/obra1.html" src="../img/homeplanning.gif" alt="homeplanning">
 
         <img class="la_ventana_indiscreta" href="./pages/obra2.html" src="../img/laventanaindiscreta.gif" alt="laventanaindiscreta">
 
@@ -87,13 +87,20 @@
 
         <img class="Like_a_virgin" href="" src="../img/Like_a_virgin.gif" alt="Like_a_virgin">
 
-        <img class="la_ventana_indiscreta" href="./pages/obra2.html" src="../img/laventanaindiscreta.gif" alt="laventanaindiscreta">
+        <img class="la_ventana_indiscreta" href="./pages/obra2.html" src="../img/laventanaindiscreta.gif" alt="laventanaindiscreta"> -->
 
-        <div class="SweetPicnic__hover">
+<!--         <div class="SweetPicnic__hover">
           <img class="sweet__picnic" src="../img/sweet picnic.jpg" alt="sweet-picnic">
-        </div>
+        </div> -->
+        
+        <img src="../img/GUM.JPG" class="rounded float-start hover" alt="gum">
+        <img src="../img/hable con ella.jpg" class="rounded float-end" alt="hable con ella">
+        <img src="../img/beyond the song.jpg" class="rounded float-start" alt="beyond the song">
+        <img src="../img/making universes web.jpg" class="rounded float-end" alt="making universes web">
+        <img src="../img/4.JPG" class="rounded float-start" alt="like a virgin">
+        <img src="../img/¿a qué huelen las nubes_.jpg" class="rounded float-end" alt="a qué huelen las nubes">
 
-      </section>
+ </section>
    </main> 
   
   <footer>
